public/stylesheets/main.css
/* ... */
.fa-yandex-international:before {
  content: "\f414";
}

.fa-yarn:before {
  content: "\f7e3";
}

.fa-yelp:before {
  content: "\f1e9";
}

.fa-yen-sign:before {
  content: "\f157";
}

.fa-yin-yang:before {
  content: "\f6ad";
}

.fa-yoast:before {
  content: "\f2b1";
}

.fa-youtube:before {
  content: "\f167";
}

.fa-youtube-square:before {
  content: "\f431";
}

.fa-zhihu:before {
  content: "\f63f";
}

.sr-only {
  border: 0;
  clip: rect(0, 0, 0, 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.sr-only-focusable:active, .sr-only-focusable:focus {
  clip: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  position: static;
  width: auto;
}

/*!
 * Font Awesome Free 5.14.0 by @fontawesome - https://fontawesome.com
 * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
 */
@font-face {
  font-family: 'Font Awesome 5 Free';
  font-style: normal;
  font-weight: 900;
  font-display: block;
  src: url("./font-awesome/webfonts/fa-solid-900.eot");
  src: url("./font-awesome/webfonts/fa-solid-900.eot?#iefix") format("embedded-opentype"), url("./font-awesome/webfonts/fa-solid-900.woff2") format("woff2"), url("./font-awesome/webfonts/fa-solid-900.woff") format("woff"), url("./font-awesome/webfonts/fa-solid-900.ttf") format("truetype"), url("./font-awesome/webfonts/fa-solid-900.svg#fontawesome") format("svg");
}

.fa,
.fas {
  font-family: 'Font Awesome 5 Free';
  font-weight: 900;
}

.header {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  background-color: #07132c;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  font-family: "Alata", Helvetica, Arial, sans-serif;
}

.header h1 {
  font-size: 3.2em;
  color: white;
  padding: 15px;
  margin: 0px;
}

.field-container {
  text-align: center;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  width: 7%;
  height: 100%;
}

.field-container-title {
  margin: 0px;
  padding: 5px;
  background-color: #07132c;
  color: white;
  font-family: "Source Sans Pro", sans-serif;
  font-weight: 800;
}

.btn-container {
  overflow-y: auto;
  overflow-x: hidden;
}

.field-btn {
  -webkit-transition: 0.1s;
  transition: 0.1s;
  background-color: white;
  color: #041219;
  border: 0px;
  text-decoration: none;
  font-family: "Source Sans Pro", sans-serif;
  padding: 5px;
  margin: 2px;
  width: 98%;
  height: auto;
}

.field-btn:hover {
  background-color: #fa7921ff;
  color: white;
}

.field-btn:focus {
  background-color: #119da4ff;
  color: white !important;
  font-weight: 900;
}

.chart-container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-flow: column;
          flex-flow: column;
  background-color: #f7f7f7;
  width: 100%;
  height: 100%;
}

svg {
  background-color: white;
}

.chart-svg {
  margin: 0px 20px 0px 20px;
}

.context-svg {
  margin: 2px 20px 20px 20px;
  -webkit-box-flex: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
}

/*
    Except when we have just one tick
    All ticks but the first one appears on the screen
    This way we prevent the first tick from 
    touching the domain line in x-axis
    It's just aesthetics
    And when we have just one tick it doesn't appear for the same reason
    It woulnd't touch the domain line but the chart line
*/
.y-axis {
  font-size: 0.7em;
}

.y-axis .tick line {
  opacity: 0.13;
}

.y-axis .tick:first-of-type line {
  opacity: 0;
}

.y-axis .domain {
  opacity: 0;
}

.x-axis {
  font-size: 0.7em;
}

/*
  Except when we have just one grid line
  All grid lines but the first one appears on the screen
  Same way as the y-axis
*/
.grid .tick {
  opacity: 0.13;
}

.grid .tick:first-of-type {
  opacity: 0;
}

.handle {
  y: 28;
  height: 30px;
  width: 10px;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  fill: white;
  stroke: black;
  stroke-width: 1.5;
  stroke-linejoin: round;
}

.tooltip-background {
  fill: white;
  opacity: 0.7;
}

.tooltip-background-stroke {
  stroke: #000;
  stroke-width: 1.5px;
  stroke-linecap: round;
  fill: transparent;
}

.focus {
  font-family: "Source Sans Pro", sans-serif;
}

.stats-container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  background-color: white;
  font-family: "Source Sans Pro", sans-serif;
  font-size: 1.5em;
  font-weight: 700;
  width: 100%;
  height: 10%;
}

.stats {
  border-right: 2px solid #a9a9a9;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-flow: column;
          flex-flow: column;
  height: 100%;
  width: 33%;
}

.stats:last-of-type {
  border: 0;
}

.stats-title {
  margin: 0;
  color: #a9a9a9;
}

.stats-value {
  margin: 0;
}

.report-container {
  background-color: #f7f7f7;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-flow: column;
          flex-flow: column;
  width: 100%;
  height: 100%;
}
/* ... */

